--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,16 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    float:right;
+    
 
   }
 
 li {
-    float: right;
-    display: inline;
+    justify-content: flex-end;
+    display: flex;
+    
 
 }
   
@@ -50,13 +54,18 @@ a {
   }
 
 .slideSection1 {
-    margin:0;
-    height: 100vh;
-    box-sizing: border-box;
+    width: 100%;
+    position: absolute;
+    height: 960px;
+    left: 0px;
+    top: 0px;
     background-image: url(/images/Rectangle1.png); 
-    background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-size: cover;
+    background-position: center;
+    margin: auto;
+    
+    
 
 }
 
@@ -120,7 +129,7 @@ a {
 }
 
 .logo {
-    position: absolute;
+    position: relative;
     width: 465px;
     height: 86px;
     left: 20px;
@@ -132,7 +141,7 @@ a {
 
 .slideSection2 {
     /* Rectangle 2 */
-    
+    position:absolute;
     width: 100%;
     height: 711px;
     left: 0px;
@@ -148,6 +157,7 @@ a {
 .section2 {
     position:relative;
     top: 100px;
+    
 
 }
 
@@ -224,6 +234,8 @@ section.slideSection2 div.oneStopFor {
 
 .slideSection3 {
     width: 100%;
+    position: absolute;
+    top: 1700px;
     
     
 }
@@ -240,13 +252,13 @@ section.slideSection2 div.oneStopFor {
 }
 
 .row div {
-    padding: 100px;
+    padding: 50px;
     
 
 }
 
 .column-1 {
-    flex:0.8;
+    flex:1;
     order:1;
 
     position:relative;
@@ -257,7 +269,7 @@ section.slideSection2 div.oneStopFor {
 }
 
 .column-2 {
-    flex:0.8;
+    flex:1;
     order:2;
 
 }
@@ -305,6 +317,142 @@ section.slideSection2 div.oneStopFor {
 .column-2 img {
     width: 615px;
     height: 411px;
+
+}
+
+/* ---------------------------- section 4 ------------------------------ */
+
+.slideSection4 {
+    position: absolute;
+    width: 100%;
+    height: 853px;
+    left: 0px;
+    
+
+    /* Sublight Engines/Orange */
+
+    background: #FF7630;
+    
+    top: 2265px;
+    
+    
+}
+
+.section4 {
+    position:relative;
+    top: 100px;
+    margin-left: auto;
+    margin-right:auto;
+
+}
+
+section.slideSection4 div.needMoreFor {
+    top: 300px;
+    text-align:center;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 29px;
+    text-align: center;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+
+}
+
+.slideSection4 h1 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #383838;
+
+}
+
+.slideSection4 p {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 110%;
+    /* or 110% */
+    text-align: center;
+    /* Sublight Engines/Gray */
+    color: #383838;
+
+}
+
+
+.container-4 {
+    position:relative;
+    top: 155px;
+    display:flex;
+    text-align: center;
+    width: 75%;
+    left:55px;
+    color: #FFFFFF;
+    
+    
+    
+
+}
+
+.container-4 div{
+    margin: 10px;
+    filter: drop-shadow(0px 8px 11px rgba(0, 0, 0, 0.25));
+    background: white;
+    
+
+}
+
+.box-41 {
+    flex:1;
+    order:1;
+
+}
+
+.box-42 {
+    flex:1;
+    order:2;
+    
+}
+
+.box-43 {
+    flex:1;
+    order:3;
+    
+}
+
+.box-44 {
+    flex:1;
+    order:4;
+
+}
+
+.box-45 {
+    flex:1;
+    order:5;
+    
+}
+
+.downloadButton {
+    position: absolute;
+    width: 294px;
+    height: 50px;
+    left: 592px;
+    top: 715px;
+    margin-left:auto;
+    margin-right:auto;
+    box-sizing: border-box;
+    border: 3px solid #FFFFFF;
+    background-color: transparent;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 22px;
+    /* identical to box height, or 122% */
+
+    text-align: center;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
 
 }
 
