--- a/css/main.css
+++ b/css/main.css
@@ -439,7 +439,7 @@ section.slideSection4 div.needMoreFor {
 .downloadButton:hover{
     color: #292929;
     border: 3px solid #292929;
-
+    cursor: pointer;
 }
 
 /* ---------------------------- section 5 ------------------------------ */
